allprojects {
    repositories {
        mavenCentral()
        mavenLocal()
    }
}

buildscript {
    rootProject.buildscript.repositories {
        mavenCentral()
        mavenLocal()
    }
    // SpringBoot 에 필요한 외부 라이브러리 정의합니다.
    rootProject.buildscript.dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:3.2.5"
        classpath "io.spring.gradle:dependency-management-plugin:1.1.4"
    }
}

configurations.configureEach {
    resolutionStrategy {
        // 동적 버전 탐색을 10분 캐시
        cacheDynamicVersionsFor 0, 'minutes'
        // 변하는 모듈(Changing Module)을 캐시하지 않음
        cacheChangingModulesFor 0, 'seconds'
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'maven-publish'
    
	sourceCompatibility = '21'
	targetCompatibility = '21'

    repositories {
        mavenCentral()
        mavenLocal()
    }

    java {
        withSourcesJar()
    }

    ext['log4j2.version'] = '2.20.0'

    ext {
        lombokVersion = '1.18.30'  // Java 21 호환 버전
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        all {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
            exclude group: 'ch.qos.logback'
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'  // JPA 제외 추가
        }
    }


    dependencyManagement {
        imports {
            // 관련 라이브러리는 버전을 명시하지 않아도 됩니다.
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.3"
        }
    }

    dependencies {

        implementation files('../libs/eximKmsClient-1.0.jar')

        // Jakarta EE 기본 API
        implementation 'jakarta.platform:jakarta.jakartaee-api:9.1.0'

        // 또는 필요한 부분만 추가
        implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
        implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
        implementation 'jakarta.transaction:jakarta.transaction-api:2.0.1'

        implementation 'com.fasterxml.jackson.core:jackson-databind'
        implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
        implementation 'org.springframework.boot:spring-boot-starter-log4j2'
        implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        developmentOnly 'org.springframework.boot:spring-boot-devtools'

        // MapStruct 사용 시
        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

        compileOnly "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

        testImplementation('org.springframework.boot:spring-boot-starter-test') {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
            exclude group: 'ch.qos.logback'
        }

        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
        implementation ("commons-io:commons-io") { version {require '2.11.0'} } // 보안취약성 제거 버전 강제 지정

        implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"

        implementation 'org.springframework.boot:spring-boot-starter-webflux'

        implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'

        compileOnly 'com.github.spotbugs:spotbugs-annotations:4.7.3'

    }
    
    compileJava.options.encoding = 'UTF-8'

    javadoc {
        source = sourceSets.main.allJava
        options.encoding = 'UTF-8'
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['-Xlint:none']
        options.fork = true
        options.forkOptions.jvmArgs += [
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
        ]
    }
}


